# ETL_Tool

./: .gitignore  README.md  alembic.ini  pyproject.toml
examples/: db_source.json  encrypted_users.json  people.json  pipeline.json  pipeline_chaining.json  pipeline_decrypt.json  pipeline_files.json  source.json  source_with_auth.json
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/__tests__/: logic.test.ts
frontend/src/api/: client.ts  sse.ts  types.ts
frontend/src/auth/: AuthContext.tsx  LoginPage.tsx
frontend/src/components/: AppLayout.tsx  ErrorModal.tsx  ui.tsx
frontend/src/diagnostics/: DiagnosticsPage.tsx
frontend/src/lib/: useAsync.ts
frontend/src/pipelines/: PipelineListPage.tsx
frontend/src/pipelines/editor/: CanvasNode.tsx  ConfigPanel.tsx  EditorPage.tsx  NodePalette.tsx  RunPanel.tsx  layout.ts  mapping.ts  nodeCatalog.ts  useRunController.ts
frontend/src/schedules/: SchedulesPage.tsx
frontend/src/secrets/: SecretsPage.tsx
src/etl_core/: __init__.py  cli.py  context.py  crypto.py  db.py  diagnostics.py  engine.py  errors.py  events.py  fileio.py  http_client.py  paths.py  redact.py  references.py  schema.py  secrets.py  ssrf.py
src/etl_core/nodes/: __init__.py  api_source.py  base.py  db_sink.py  db_source.py  decrypt.py  file_sink.py  file_source.py  iterator.py  merge.py  registry.py  transform.py
src/etl_server/: __init__.py  __main__.py  app.py  arq_worker.py  config.py  db.py  deps.py  models.py  queue.py  scheduler.py  schemas.py  secrets_store.py  security.py  service.py  worker.py
src/etl_server/migrations/: env.py
src/etl_server/migrations/versions/: 90709d545c05_initial_schema.py
src/etl_server/routers/: __init__.py  auth.py  diagnostics.py  pipelines.py  runs.py  schedules.py  secrets.py
tests/: conftest.py  test_api_source.py  test_chaining.py  test_cli.py  test_crypto.py  test_db_cli.py  test_db_diagnostics.py  test_db_nodes.py  test_decrypt_node.py  test_diagnostics.py  test_engine.py  test_file_nodes.py  test_iterator.py  test_merge.py  test_references.py  test_schema_validation.py  test_secrets_redaction.py  test_ssrf.py  test_transform.py
tests/server/: __init__.py  conftest.py  test_app_factories.py  test_auth.py  test_diagnostics.py  test_pipelines.py  test_runs.py  test_scheduler.py  test_schedules.py  test_secrets.py  test_worker.py
