[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-tool"
version = "0.3.0"
description = "Visual node-based ETL platform - engine (Phases 1-2) + server (Phase 3)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "polars>=1.0",
    "pyarrow>=16",
    "cryptography>=42",
    "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
# PostgreSQL driver for db_source / db_sink against a real Postgres server.
# Hermetic tests use SQLite (aiosqlite) through the same SQLAlchemy async path.
postgres = [
    "asyncpg>=0.29",
]
# Phase 3 server: FastAPI app, JWT auth, arq/Redis workers, Alembic migrations.
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "alembic>=1.13",
    "arq>=0.26",
    "redis>=5.0",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "croniter>=2.0",
    "asyncpg>=0.29",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "aiosqlite>=0.20",
]

[project.scripts]
etl = "etl_core.cli:entrypoint"
etl-server = "etl_server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
